--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Jiangdan Liu's Homepage
+page-top-title: Jiangdan Liu
+top-section-bg-text: Finance
+home-subtitle: Jiangdan Liu&ensp;|&ensp;刘江丹
+copyright-text: '&copy; Jiangdan Liu 2025-2026. All Rights Reserved.'
